--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<title>Bikcraft</title>
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/grid.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Bikcraft</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <a href="index.html" class="grid-4">
+          <img src="img/logo.png" alt="Logo">
+        </a>
+        <nav class="grid-12 header__nav">
+          <ul>
+            <li>
+              <a href="sobre.html">Sobre</a>
+            </li>
+            <li>
+              <a href="produtos.html">Produtos</a>
+            </li>
+            <li>
+              <a href="portifolio.html">Portifólio</a>
+            </li>
+            <li>
+              <a href="contato.html">Contato</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="section-intro">
+      <div class="container">
+        <h1>Bicicletas Feitas a Mãos</h1>
+        <blockquote class="quote--external">
+          <p>“não tenha nada em sua casa que você
+            não considere útil ou acredita ser bonito”
+          </p>
+          <cite>WILLIAM MORRIS</cite>
+        </blockquote>
+        <a href="produtos.html" class="btn">Orçamento</a>
+      </div>
+    </section>
+  </body>
 </html>
