--- a/index.html
+++ b/index.html
@@ -41,7 +41,40 @@
           </p>
           <cite>WILLIAM MORRIS</cite>
         </blockquote>
-        <a href="produtos.html" class="btn">Orçamento</a>
+        <a href="produtos.html" class="btn btn--white">Orçamento</a>
+      </div>
+    </section>
+
+    <section class="section-products container">
+      <h2 class="heading heading--2">Protudos</h2>
+      <ul class="products__list">
+        <li class="grid-1-3">
+          <div class="products__img">
+            <img src="img/produtos/passeio.png" alt="Bicicleta de Passeio">
+          </div>
+          <h3 class="heading heading--3">Passeio</h3>
+          <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+
+        <li class="grid-1-3">
+          <div class="products__img">
+            <img src="img/produtos/passeio.png" alt="Bicicleta de Passeio">
+          </div>
+          <h3 class="heading heading--3">Passeio</h3>
+          <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+
+        <li class="grid-1-3">
+          <div class="products__img">
+            <img src="img/produtos/passeio.png" alt="Bicicleta de Passeio">
+          </div>
+          <h3 class="heading heading--3">Passeio</h3>
+          <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+      </ul>
+      <div class="products__cta">
+        <p> Clique aqui e veja os detalhes.</p>
+        <a href="#produtos.html" class="btn btn--primary--bg-black">Produtos</a>
       </div>
     </section>
   </body>
