Portifolio section's was styled

--- a/index.html
+++ b/index.html
@@ -77,5 +77,25 @@
         <a href="#produtos.html" class="btn btn--primary--bg-black">Produtos</a>
       </div>
     </section>
+    <section class="section-portifolio">
+      <div class="container">
+        <h2 class="heading heading--2">Portifólio</h2>
+        <ul>
+          <li class="grid-8">
+            <img src="img/portfolio/retro.jpg" alt="Bike Retro">
+          </li>
+          <li class="grid-8">
+            <img src="img/portfolio/passeio.jpg" alt="Bike Passeio">
+          </li>
+          <li class="grid-16">
+            <img src="img/portfolio/esporte.jpg" alt="Bike Esporte">
+          </li>
+        </ul>
+        <div class="portifolio__cta">
+          <p> Clique aqui e veja os detalhes.</p>
+          <a href="#produtos.html" class="btn btn--primary--bg-black">Produtos</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
