--- a/index.html
+++ b/index.html
@@ -97,5 +97,30 @@
         </div>
       </div>
     </section>
+
+    <section class="section-quality container">
+      <h2 class="heading heading--2">
+        qualidade
+      </h2>
+      <img src="img/bikcraft-qualidade.png" alt="Qualidade">
+      <ul>
+        <li class="grid-1-3">
+          <h3 class="heading heading--3">Durabilidade</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere iure modi obcaecati vel!</p>
+        </li>
+        <li class="grid-1-3">
+          <h3 class="heading heading--3">Design</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere iure modi obcaecati vel!</p>
+        </li>
+        <li class="grid-1-3">
+          <h3 class="heading heading--3">Sustentabilidade</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere iure modi obcaecati vel!</p>
+        </li>
+      </ul>
+      <div class="quality__cta">
+        <p> Clique aqui e veja os detalhes.</p>
+        <a href="#produtos.html" class="btn btn--primary--bg-black">Produtos</a>
+      </div>
+    </section>
   </body>
 </html>
