--- a/index.html
+++ b/index.html
@@ -122,5 +122,63 @@
         <a href="#produtos.html" class="btn btn--primary--bg-black">Produtos</a>
       </div>
     </section>
+    <section class="section-break">
+      <blockquote class="quote--external">
+        <p>
+          “o verdadeiro segredo da felicidade está em ter um genuíno
+          interesse por todos os detalhes da vida cotidiana.”
+        </p>
+        <cite>WILLIAM MORRIS</cite>
+      </blockquote>
+    </section>
+    <footer>
+      <div class="footer">
+        <div class="container">
+          <div class="grid-8 footer__history">
+            <h3 class="heading heading--3">Nossa história</h3>
+            <p>
+              O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida
+              cotidiana cotidiana. interesse por todos os detalhes da vida cotidiana cotidiana.
+            </p>
+          </div>
+          <div class="grid-4 footer__contact">
+            <h3 class="heading heading--3">Contato</h3>
+            <ul>
+              <li>- 21 23232-4343</li>
+              <li>- contato@bikcraft.com</li>
+              <li>- Botafago - RJ</li>
+            </ul>
+
+          </div>
+          <div class="grid-4 footer__social-urls">
+            <h3 class="heading heading--3">Redes Sociais</h3>
+            <ul>
+              <li>
+                <a href="http://facebook.com" target="_blank">
+                  <img src="img/redes-sociais/facebook.png" alt="Facebook">
+                </a>
+              </li>
+              <li>
+                <a href="http://instagram.com" target="_blank">
+                  <img src="img/redes-sociais/instagram.png" alt="Instagram">
+                </a>
+              </li>
+              <li>
+                <a href="http://twitter.com" target="_blank">
+                  <img src="img/redes-sociais/twitter.png" alt="Twitter">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div class="container">
+          <p class="grid-16">
+            Bikcraft 2015 - Alguns direitos reservados.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
