Section products was styled

--- a/produtos.html
+++ b/produtos.html
@@ -120,6 +120,41 @@
       </div>
     </section>
 
+    <section class="section-intro-products__budget">
+      <div class="container">
+        <h2 class="heading heading--2">Orçamento</h2>
+        <form id="form" class="grid-8" >
+          <label for="name">Nome</label>
+          <input type="text" id="name">
+
+          <label for="email">E-mail</label>
+          <input type="text" id="email">
+
+          <label for="phone">Telefone</label>
+          <input type="text" id="phone">
+
+          <label for="info">Especificações</label>
+          <textarea id="info"></textarea>
+
+          <button type="submit" class="btn btn--primary">Enviar</button>
+        </form>
+        <div class="grid-8 section-intro-products__data">
+          <h3 class="heading heading--3">Dados</h3>
+          <span>+55 1231-1231</span>
+          <span>Lorem ipsum dolor sit.</span>
+          <h4 class="heading heading--3">Monte sua Bikcraft</h4>
+          <p>Escolha suas especificações</p>
+          <ul>
+            <li>- Lorem ipsum dolor sit.</li>
+            <li>- Lorem ipsum dolor sit.</li>
+            <li>- Lorem ipsum dolor sit.</li>
+            <li>- Lorem ipsum dolor sit.</li>
+            <li>- Lorem ipsum dolor sit.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <section class="section-break">
       <blockquote class="quote--external">
         <p>
